<resources>
    <string name="app_name">ClearTab</string>
    <string name="title_home">Home</string>
    <string name="title_meditate">Meditation</string>
    <string name="title_journal">Journal</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="exercise_pushText">Enter your insights here…</string>
    <string name="journal_pushText">Unload your thoughts…</string>
    <string name="timer_startTime">00:00</string>
    <string name="journal">My Journal</string>
</resources>